--- a/index.html
+++ b/index.html
@@ -1,53 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Matthew Ahou | Mechanical Engineering Portfolio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 900px;
-            margin: auto;
-            padding: 40px;
-            line-height: 1.6;
-        }
-        h1, h2 {
-            color: #222;
-        }
-        a {
-            color: #0066cc;
-            text-decoration: none;
-        }
-        .project {
-            border-top: 1px solid #ddd;
-            padding-top: 20px;
-            margin-top: 20px;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Filler Name | Engineering Portfolio</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<h1>Your Name</h1>
-<p>
-Mechanical Engineering student focused on hands-on design, CAD, and electromechanical systems.
-</p>
+  <!-- NAV -->
+  <div class="topbar">
+    <div class="container">
+      <div class="nav">
+        <div class="brand">Filler Name</div>
+        <div class="navlinks">
+          <a href="#projects">Projects</a>
+          <a href="#resume">Resume</a>
+          <a href="#contact">Contact</a>
+        </div>
+      </div>
+    </div>
+  </div>
 
-<p>
-<a href="resume.pdf">Resume</a> |
-<a href="https://github.com/YOUR-USERNAME">GitHub</a> |
-<a href="https://www.linkedin.com/in/YOUR-LINK">LinkedIn</a>
-</p>
+  <!-- HERO -->
+  <section class="hero">
+    <div class="container">
+      <div class="heroGrid">
+        <div>
+          <h1>Filler Name</h1>
+          <p class="subtitle">Filler Title Line (e.g., Mechanical Engineering Student)</p>
+          <p class="bodyText">
+            Filler paragraph text. This is where you describe what you do in a professional way:
+            design, CAD, prototyping, testing, iteration, and teamwork.
+          </p>
 
-<h2>Projects</h2>
+          <p class="caption">
+            Filler caption text describing the image on the right.
+          </p>
 
-<div class="project">
-    <h3>RC Car – Electromechanical Design</h3>
-    <p>
-    Designed and built a 2WD RC vehicle using a 3D-printed chassis, Arduino control,
-    and LiPo power system.
-    </p>
-    <a href="rc-car.html">View project →</a>
-</div>
+          <div class="ctaRow">
+            <a class="btn btnPrimary" href="#projects">See Projects</a>
+            <a class="btn btnGhost" href="#resume">Download Resume</a>
+          </div>
+
+          <div class="pills">
+            <div class="pill">X Major Projects</div>
+            <div class="pill">Y+ Years Experience</div>
+            <div class="pill">100% Hands-on</div>
+          </div>
+        </div>
+
+        <div class="heroCard">
+          <div class="heroImg" title="Image placeholder"></div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- PROJECTS -->
+  <section class="section" id="projects">
+    <div class="container">
+      <h2>Featured Projects</h2>
+      <p class="lead">Click a card to view details.</p>
+
+      <div class="grid">
+        <a class="card" href="projects/project-1.html">
+          <div class="thumb"></div>
+          <div class="cardBody">
+            <span class="badge blue">Class Project</span>
+            <div class="title">Project Title — Filler Subtitle</div>
+            <div class="metaRow">
+              <span>📅 Jan 20XX — Present</span>
+            </div>
+            <div class="tagRow">
+              <span class="tag">Tag One</span>
+              <span class="tag">Tag Two</span>
+              <span class="tag">Tag Three</span>
+            </div>
+            <p class="desc">Filler description sentence that summarizes the project at a glance.</p>
+          </div>
+        </a>
+
+        <a class="card" href="projects/project-2.html">
+          <div class="thumb"></div>
+          <div class="cardBody">
+            <span class="badge green">Design Team</span>
+            <div class="title">Project Title — Filler Subtitle</div>
+            <div class="metaRow">
+              <span>📅 Feb 20XX — Present</span>
+            </div>
+            <div class="tagRow">
+              <span class="tag">Tool A</span>
+              <span class="tag">Tool B</span>
+              <span class="tag">Tool C</span>
+            </div>
+            <p class="desc">Filler description sentence that summarizes the project at a glance.</p>
+          </div>
+        </a>
+
+        <a class="card" href="projects/project-3.html">
+          <div class="thumb"></div>
+          <div class="cardBody">
+            <span class="badge red">Personal Project</span>
+            <div class="title">Project Title — Filler Subtitle*</div>
+            <div class="metaRow">
+              <span>📅 Mar 20XX — Present</span>
+            </div>
+            <div class="tagRow">
+              <span class="tag">System X</span>
+              <span class="tag">System Y</span>
+              <span class="tag">Safety</span>
+            </div>
+            <p class="desc">Filler description sentence that summarizes the project at a glance.</p>
+          </div>
+        </a>
+
+        <a class="card" href="projects/project-4.html">
+          <div class="thumb"></div>
+          <div class="cardBody">
+            <span class="badge green">Design Team</span>
+            <div class="title">Project Title — Filler Subtitle</div>
+            <div class="metaRow">
+              <span>📅 Apr 20XX — Present</span>
+            </div>
+            <div class="tagRow">
+              <span class="tag">CAD</span>
+              <span class="tag">3D Printing</span>
+              <span class="tag">Controls</span>
+            </div>
+            <p class="desc">Filler description sentence that summarizes the project at a glance.</p>
+          </div>
+        </a>
+      </div>
+    </div>
+  </section>
+
+  <!-- RESUME -->
+  <section class="section" id="resume">
+    <div class="container">
+      <h2>Resume</h2>
+      <p class="lead">Filler text. Later you can upload resume.pdf and link it here.</p>
+    </div>
+  </section>
+
+  <!-- CONTACT -->
+  <section class="section" id="contact">
+    <div class="container">
+      <h2>Contact</h2>
+      <p class="lead">Filler text.</p>
+      <div class="panel">
+        <p><strong>Email:</strong> filler.email@example.com</p>
+        <p><strong>LinkedIn:</strong> linkedin.com/in/filler</p>
+        <p><strong>GitHub:</strong> github.com/filler</p>
+      </div>
+    </div>
+  </section>
+
+  <div class="footer">
+    <div class="container">© 20XX Filler Name — Built with GitHub Pages</div>
+  </div>
 
 </body>
 </html>
