Implement hero section fade effect
Add smooth blend effect from dark hero to light background.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 
   <!-- HERO -->
   <section class="hero">
+    <!-- Smooth blend from dark hero into light page background -->
+    <div class="heroFade"></div>
+
     <div class="container">
       <div class="heroGrid">
         <div>
