Enhance hero section with corners div
Added hero corners div to the hero section.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
   </div>
 
   <!-- HERO -->
-  <section class="hero">
-    <!-- Smooth blend from dark hero into light page background -->
+ <section class="hero">
+  <div class="heroCorners"></div>
+
+  <div class="container">
+    <!-- everything else stays exactly the same -->
+
 
     <div class="container">
       <div class="heroGrid">
