--- a/index.html
+++ b/index.html
@@ -5,212 +5,160 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Filler Name | Engineering Portfolio</title>
 
-  <!-- BASE STYLES -->
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="theme.css">
-
-  <style>
-    /* =====================
-       HERO BACKGROUND
-    ====================== */
-    .hero {
-      position: relative;
-      background:
-        linear-gradient(135deg, #061e41, #0b3c7a),
-        repeating-linear-gradient(
-          0deg,
-          rgba(255,255,255,0.06) 0,
-          rgba(255,255,255,0.06) 1px,
-          transparent 1px,
-          transparent 40px
-        ),
-        repeating-linear-gradient(
-          90deg,
-          rgba(255,255,255,0.06) 0,
-          rgba(255,255,255,0.06) 1px,
-          transparent 1px,
-          transparent 40px
-        );
-      background-blend-mode: overlay;
-      color: white;
-      padding: 120px 0 80px;
-      overflow: hidden;
-    }
-
-    /* =====================
-       HERO CONTENT GRID
-    ====================== */
-    .heroGrid {
-      display: grid;
-      grid-template-columns: 1.2fr 1fr;
-      gap: 60px;
-      align-items: center;
-    }
-
-    /* =====================
-       IMAGE PLACEHOLDER
-    ====================== */
-    .heroCard {
-      position: relative;
-      width: 100%;
-      aspect-ratio: 1 / 1;
-      border-radius: 20px;
-      background: rgba(255,255,255,0.08);
-      backdrop-filter: blur(6px);
-    }
-
-    .heroImg {
-      position: absolute;
-      inset: 20%;
-      border-radius: 14px;
-      background:
-        repeating-linear-gradient(
-          45deg,
-          rgba(255,255,255,0.12),
-          rgba(255,255,255,0.12) 10px,
-          rgba(255,255,255,0.04) 10px,
-          rgba(255,255,255,0.04) 20px
-        );
-    }
-
-    /* =====================
-       BLUEPRINT CORNERS
-    ====================== */
-    .hero::before,
-    .hero::after {
-      content: "";
-      position: absolute;
-      width: 120px;
-      height: 120px;
-      border: 2px solid rgba(255,255,255,0.7);
-    }
-
-    .hero::before {
-      top: 40px;
-      left: 40px;
-      border-right: none;
-      border-bottom: none;
-    }
-
-    .hero::after {
-      bottom: 40px;
-      right: 40px;
-      border-left: none;
-      border-top: none;
-    }
-
-    /* =====================
-       HERO → CONTENT BLEND
-    ====================== */
-    .heroFade {
-      width: 100%;
-      height: 200px; /* 🔽 LOWER OR RAISE BLEND HERE */
-      background: linear-gradient(
-        to bottom,
-        rgba(6, 30, 65, 0) 0%,
-        rgba(6, 30, 65, 0.5) 45%,
-        #eef5fb 100%
-      );
-    }
-
-    /* =====================
-       SECTION BACKGROUND
-    ====================== */
-    .section {
-      background: #eef5fb;
-      padding: 100px 0;
-    }
-  </style>
+  <!-- Use ONLY theme.css to avoid conflicts -->
+  <link rel="stylesheet" href="theme.css?v=1">
 </head>
 
 <body>
 
-<!-- NAV -->
-<div class="topbar">
-  <div class="container">
-    <div class="nav">
-      <div class="brand">Filler Name</div>
-      <div class="navlinks">
-        <a href="#projects">Projects</a>
-        <a href="#resume">Resume</a>
-        <a href="#contact">Contact</a>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- HERO -->
-<section class="hero">
-  <div class="container">
-    <div class="heroGrid">
-
-      <div>
-        <h1>Filler Name</h1>
-        <p class="subtitle">Filler Title Line (e.g., Mechanical Engineering Student)</p>
-
-        <p class="bodyText">
-          Filler paragraph text. This is where you describe what you do in a professional way:
-          design, CAD, prototyping, testing, iteration, and teamwork.
-        </p>
-
-        <p class="caption">
-          Filler caption text describing the image on the right.
-        </p>
-
-        <div class="ctaRow">
-          <a class="btn btnPrimary" href="#projects">See Projects</a>
-          <a class="btn btnGhost" href="#resume">Download Resume</a>
-        </div>
-
-        <div class="pills">
-          <div class="pill">X Major Projects</div>
-          <div class="pill">Y+ Years Experience</div>
-          <div class="pill">100% Hands-on</div>
+  <!-- NAV -->
+  <div class="topbar">
+    <div class="container">
+      <div class="nav">
+        <div class="brand">Filler Name</div>
+        <div class="navlinks">
+          <a href="#projects">Projects</a>
+          <a href="#resume">Resume</a>
+          <a href="#contact">Contact</a>
         </div>
       </div>
+    </div>
+  </div>
 
-      <div class="heroCard">
-        <div class="heroImg"></div>
+  <!-- HERO -->
+  <section class="hero">
+    <!-- Corner lines -->
+    <div class="corner cornerLeft" aria-hidden="true"></div>
+    <div class="corner cornerRight" aria-hidden="true"></div>
+
+    <div class="container">
+      <div class="heroGrid">
+        <div class="heroText">
+          <h1>Filler Name</h1>
+          <p class="subtitle">Filler Title Line (e.g., Mechanical Engineering Student)</p>
+
+          <p class="bodyText">
+            Filler paragraph text. This is where you describe what you do in a professional way:
+            design, CAD, prototyping, testing, iteration, and teamwork.
+          </p>
+
+          <p class="caption">
+            Filler caption text describing the image on the right.
+          </p>
+
+          <div class="ctaRow">
+            <a class="btn btnPrimary" href="#projects">See Projects</a>
+            <a class="btn btnGhost" href="#resume">Download Resume</a>
+          </div>
+
+          <div class="pills">
+            <div class="pill">X Major Projects</div>
+            <div class="pill">Y+ Years Experience</div>
+            <div class="pill">100% Hands-on</div>
+          </div>
+        </div>
+
+        <div class="heroCard">
+          <div class="heroImg" title="Image placeholder"></div>
+        </div>
       </div>
-
     </div>
-  </div>
-</section>
+  </section>
 
-<!-- BLEND -->
-<div class="heroFade"></div>
+  <!-- PROJECTS -->
+  <section class="section" id="projects">
+    <div class="container">
+      <h2>Featured Projects</h2>
+      <p class="lead">Click a card to view details.</p>
 
-<!-- PROJECTS -->
-<section class="section" id="projects">
-  <div class="container">
-    <h2>Featured Projects</h2>
-    <p class="lead">Click a card to view details.</p>
+      <div class="grid">
+        <a class="card" href="projects/project-1.html">
+          <div class="thumb"></div>
+          <div class="cardBody">
+            <span class="badge blue">Class Project</span>
+            <div class="title">Project Title — Filler Subtitle</div>
+            <div class="metaRow"><span>📅 Jan 20XX — Present</span></div>
+            <div class="tagRow">
+              <span class="tag">Tag One</span>
+              <span class="tag">Tag Two</span>
+              <span class="tag">Tag Three</span>
+            </div>
+            <p class="desc">Filler description sentence that summarizes the project at a glance.</p>
+          </div>
+        </a>
 
-    <div class="grid">
-      <!-- cards unchanged -->
+        <a class="card" href="projects/project-2.html">
+          <div class="thumb"></div>
+          <div class="cardBody">
+            <span class="badge green">Design Team</span>
+            <div class="title">Project Title — Filler Subtitle</div>
+            <div class="metaRow"><span>📅 Feb 20XX — Present</span></div>
+            <div class="tagRow">
+              <span class="tag">Tool A</span>
+              <span class="tag">Tool B</span>
+              <span class="tag">Tool C</span>
+            </div>
+            <p class="desc">Filler description sentence that summarizes the project at a glance.</p>
+          </div>
+        </a>
+
+        <a class="card" href="projects/project-3.html">
+          <div class="thumb"></div>
+          <div class="cardBody">
+            <span class="badge red">Personal Project</span>
+            <div class="title">Project Title — Filler Subtitle*</div>
+            <div class="metaRow"><span>📅 Mar 20XX — Present</span></div>
+            <div class="tagRow">
+              <span class="tag">System X</span>
+              <span class="tag">System Y</span>
+              <span class="tag">Safety</span>
+            </div>
+            <p class="desc">Filler description sentence that summarizes the project at a glance.</p>
+          </div>
+        </a>
+
+        <a class="card" href="projects/project-4.html">
+          <div class="thumb"></div>
+          <div class="cardBody">
+            <span class="badge green">Design Team</span>
+            <div class="title">Project Title — Filler Subtitle</div>
+            <div class="metaRow"><span>📅 Apr 20XX — Present</span></div>
+            <div class="tagRow">
+              <span class="tag">CAD</span>
+              <span class="tag">3D Printing</span>
+              <span class="tag">Controls</span>
+            </div>
+            <p class="desc">Filler description sentence that summarizes the project at a glance.</p>
+          </div>
+        </a>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<!-- RESUME -->
-<section class="section" id="resume">
-  <div class="container">
-    <h2>Resume</h2>
-    <p class="lead">Upload resume.pdf and link it here.</p>
-  </div>
-</section>
+  <!-- RESUME -->
+  <section class="section" id="resume">
+    <div class="container">
+      <h2>Resume</h2>
+      <p class="lead">Filler text. Later you can upload resume.pdf and link it here.</p>
+    </div>
+  </section>
 
-<!-- CONTACT -->
-<section class="section" id="contact">
-  <div class="container">
-    <h2>Contact</h2>
-    <p class="lead">Filler text.</p>
-  </div>
-</section>
+  <!-- CONTACT -->
+  <section class="section" id="contact">
+    <div class="container">
+      <h2>Contact</h2>
+      <p class="lead">Filler text.</p>
+      <div class="panel">
+        <p><strong>Email:</strong> filler.email@example.com</p>
+        <p><strong>LinkedIn:</strong> linkedin.com/in/filler</p>
+        <p><strong>GitHub:</strong> github.com/filler</p>
+      </div>
+    </div>
+  </section>
 
-<div class="footer">
-  <div class="container">© 20XX Filler Name — Built with GitHub Pages</div>
-</div>
+  <div class="footer">
+    <div class="container">© 20XX Filler Name — Built with GitHub Pages</div>
+  </div>
 
 </body>
 </html>
