--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Filler Name | Engineering Portfolio</title>
-
-  <!-- Use ONLY theme.css to avoid conflicts -->
-  <link rel="stylesheet" href="theme.css?v=7">
+  <link rel="stylesheet" href="theme.css?v=1">
 </head>
-
 <body>
 
   <!-- NAV -->
@@ -27,13 +24,9 @@
 
   <!-- HERO -->
   <section class="hero">
-    <!-- Corner lines -->
-    <div class="corner cornerLeft" aria-hidden="true"></div>
-    <div class="corner cornerRight" aria-hidden="true"></div>
-
     <div class="container">
       <div class="heroGrid">
-        <div class="heroText">
+        <div>
           <h1>Filler Name</h1>
           <p class="subtitle">Filler Title Line (e.g., Mechanical Engineering Student)</p>
 
@@ -65,7 +58,7 @@
     </div>
   </section>
 
-  <!-- PROJECTS -->
+  <!-- PROJECTS (2 cards only) -->
   <section class="section" id="projects">
     <div class="container">
       <h2>Featured Projects</h2>
@@ -75,60 +68,30 @@
         <a class="card" href="projects/project-1.html">
           <div class="thumb"></div>
           <div class="cardBody">
-            <span class="badge blue">Class Project</span>
+            <span class="badge blue">Personal Project</span>
             <div class="title">Project Title — Filler Subtitle</div>
-            <div class="metaRow"><span>📅 Jan 20XX — Present</span></div>
+            <div class="metaRow"><span>📅 20XX</span></div>
             <div class="tagRow">
-              <span class="tag">Tag One</span>
-              <span class="tag">Tag Two</span>
-              <span class="tag">Tag Three</span>
+              <span class="tag">CAD</span>
+              <span class="tag">Prototyping</span>
+              <span class="tag">Testing</span>
             </div>
-            <p class="desc">Filler description sentence that summarizes the project at a glance.</p>
+            <p class="desc">Short filler description for what this project is and what you built.</p>
           </div>
         </a>
 
         <a class="card" href="projects/project-2.html">
           <div class="thumb"></div>
           <div class="cardBody">
-            <span class="badge green">Design Team</span>
+            <span class="badge green">Class Project</span>
             <div class="title">Project Title — Filler Subtitle</div>
-            <div class="metaRow"><span>📅 Feb 20XX — Present</span></div>
+            <div class="metaRow"><span>📅 20XX</span></div>
             <div class="tagRow">
-              <span class="tag">Tool A</span>
-              <span class="tag">Tool B</span>
-              <span class="tag">Tool C</span>
+              <span class="tag">Analysis</span>
+              <span class="tag">SolidWorks</span>
+              <span class="tag">Iteration</span>
             </div>
-            <p class="desc">Filler description sentence that summarizes the project at a glance.</p>
-          </div>
-        </a>
-
-        <a class="card" href="projects/project-3.html">
-          <div class="thumb"></div>
-          <div class="cardBody">
-            <span class="badge red">Personal Project</span>
-            <div class="title">Project Title — Filler Subtitle*</div>
-            <div class="metaRow"><span>📅 Mar 20XX — Present</span></div>
-            <div class="tagRow">
-              <span class="tag">System X</span>
-              <span class="tag">System Y</span>
-              <span class="tag">Safety</span>
-            </div>
-            <p class="desc">Filler description sentence that summarizes the project at a glance.</p>
-          </div>
-        </a>
-
-        <a class="card" href="projects/project-4.html">
-          <div class="thumb"></div>
-          <div class="cardBody">
-            <span class="badge green">Design Team</span>
-            <div class="title">Project Title — Filler Subtitle</div>
-            <div class="metaRow"><span>📅 Apr 20XX — Present</span></div>
-            <div class="tagRow">
-              <span class="tag">CAD</span>
-              <span class="tag">3D Printing</span>
-              <span class="tag">Controls</span>
-            </div>
-            <p class="desc">Filler description sentence that summarizes the project at a glance.</p>
+            <p class="desc">Short filler description for the goal, constraints, and outcome.</p>
           </div>
         </a>
       </div>
