--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
     <div class="container">
       <div class="heroGrid">
         <div>
-          <h1>Filler Name</h1>
-          <p class="subtitle">Filler Title Line (e.g., Mechanical Engineering Student)</p>
+          <h1>Matthew Ahou</h1>
+          <p class="subtitle">Sophmore Mechanical Engineering Student</p>
+          <p class="subtitle">Wentworth Institute of Technology</p>
 
           <p class="bodyText">
             Filler paragraph text. This is where you describe what you do in a professional way:
