index.html changes

--- a/index.html
+++ b/index.html
@@ -28,17 +28,15 @@
       <div class="heroGrid">
         <div>
           <h1>Matthew Ahou</h1>
-          <p class="subtitle">Sophmore Mechanical Engineering Student</p>
-          <p class="subtitle">Wentworth Institute of Technology</p>
+          <p class="subtitle">Sophmore Mechanical Engineering Student at Wentworth Institute of Technology</p>
 
           <p class="bodyText">
-            Filler paragraph text. This is where you describe what you do in a professional way:
-            design, CAD, prototyping, testing, iteration, and teamwork.
+            Welcome to my portfolio! I am a sophmore mechanical engineering student at Wentworth Institute of Technology
+            actively seeking an internship for summer 2026. I've begun my journey with hands-on projects involving CAD, 
+            electromechanics, 3D printing and more.
           </p>
 
-          <p class="caption">
-            Filler caption text describing the image on the right.
-          </p>
+        
 
           <div class="ctaRow">
             <a class="btn btnPrimary" href="#projects">See Projects</a>
@@ -46,9 +44,6 @@
           </div>
 
           <div class="pills">
-            <div class="pill">X Major Projects</div>
-            <div class="pill">Y+ Years Experience</div>
-            <div class="pill">100% Hands-on</div>
           </div>
         </div>
 
@@ -70,14 +65,17 @@
           <div class="thumb"></div>
           <div class="cardBody">
             <span class="badge blue">Personal Project</span>
-            <div class="title">Project Title — Filler Subtitle</div>
+            <div class="title">2WD RC Car — 1st Model</div>
             <div class="metaRow"><span>📅 20XX</span></div>
             <div class="tagRow">
               <span class="tag">CAD</span>
               <span class="tag">Prototyping</span>
               <span class="tag">Testing</span>
+              <span class="tag">3D Printing</span>
             </div>
-            <p class="desc">Short filler description for what this project is and what you built.</p>
+            <p class="desc">2WD RC car capable of reaching 20km/h with rapid-response 
+              steering including mechanical design, electronics, and control systems
+            </p>
           </div>
         </a>
 
@@ -111,17 +109,17 @@
   <section class="section" id="contact">
     <div class="container">
       <h2>Contact</h2>
-      <p class="lead">Filler text.</p>
+      <p class="lead">Feel free to contact me anytime!</p>
       <div class="panel">
-        <p><strong>Email:</strong> filler.email@example.com</p>
-        <p><strong>LinkedIn:</strong> linkedin.com/in/filler</p>
-        <p><strong>GitHub:</strong> github.com/filler</p>
+        <p><strong>Email:</strong> ahoum@wit.edu</p>
+        <p><strong>Phone Number:</strong> 617-487-2005</p>
+        <p><strong>LinkedIn:</strong> www.linkedin.com/in/matthew-ahou-a22bb7315/</p>
       </div>
     </div>
   </section>
 
   <div class="footer">
-    <div class="container">© 20XX Filler Name — Built with GitHub Pages</div>
+    <div class="container">© 2025 Matthew Ahou — Built with GitHub Pages</div>
   </div>
 
 </body>
