index.html addition of resume

--- a/index.html
+++ b/index.html
@@ -101,9 +101,24 @@
   <section class="section" id="resume">
     <div class="container">
       <h2>Resume</h2>
-      <p class="lead">Filler text. Later you can upload resume.pdf and link it here.</p>
+      <p class="lead">View or download my resume below.</p>
+
+      <div class="resumeViewer">
+        <iframe 
+          src="Matthew Ahou Resume .pdf"
+          title="Resume PDF"
+          loading="lazy">
+        </iframe>
+      </div>
+
+      <p style="margin-top:14px;">
+        <a class="btn btnPrimary" href="resume.pdf" download>
+         Download Resume (PDF)
+        </a>
+      </p>
     </div>
   </section>
+
 
   <!-- CONTACT -->
   <section class="section" id="contact">
