index.html resume changes

--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
           <p class="subtitle">Sophmore Mechanical Engineering Student at Wentworth Institute of Technology</p>
 
           <p class="bodyText">
-            Welcome to my portfolio! I am a sophmore mechanical engineering student at Wentworth Institute of Technology
-            actively seeking an internship for summer 2026. I've begun my journey with hands-on projects involving CAD, 
-            electromechanics, 3D printing and more.
+            Welcome to my portfolio! I am a sophmore mechanical engineering student at Wentworth Institute of Technology actively seeking an internship for
+             summer 2026. I've begun my journey with hands-on projects involving CAD, electromechanics, 3D printing and more.
           </p>
 
         
@@ -105,15 +104,16 @@
 
       <div class="resumeViewer">
         <iframe 
-          src="Matthew Ahou Resume .pdf"
+          src="Matthew%20Ahou%20Resume%20.pdf"
           title="Resume PDF"
           loading="lazy">
         </iframe>
+
       </div>
 
       <p style="margin-top:14px;">
-        <a class="btn btnPrimary" href="resume.pdf" download>
-         Download Resume (PDF)
+        <a class="btn btnPrimary" href="Matthew%20Ahou%20Resume%20.pdf" download>
+          Download Resume (PDF)
         </a>
       </p>
     </div>
