--- a/projects/rc.car.html
+++ b/projects/rc.car.html
@@ -5,10 +5,9 @@
   <title>2WD RC Car | Matthew Ahou</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- IMPORTANT: go back one level to reach theme.css -->
+  <!-- Go back one folder to access theme.css -->
   <link rel="stylesheet" href="../theme.css">
 </head>
-
 <body>
 
   <!-- NAV -->
@@ -25,13 +24,13 @@
     </div>
   </div>
 
-  <!-- PROJECT PAGE -->
+  <!-- PROJECT CONTENT -->
   <section class="section">
     <div class="container">
 
-      <h1>2WD RC Car — First Iteration</h1>
+      <h1>2WD RC Car — First Model</h1>
       <p class="lead">
-        Personal electromechanical project focused on design, control, and testing.
+        Personal electromechanical project focused on design, control systems, and testing.
       </p>
 
       <div class="panel" style="margin-top:32px;">
@@ -39,20 +38,21 @@
         <p>
           This project involved the design and construction of a 2-wheel-drive RC car
           capable of reaching approximately 20 km/h. The system integrates mechanical
-          design, electrical hardware, and control logic.
+          design, electronics, and control logic.
         </p>
 
         <h3>Control System</h3>
         <ul>
           <li>FlySky transmitter and receiver</li>
-          <li>Microcontroller-based motor control</li>
-          <li>PWM speed control and steering servo</li>
+          <li>DC motor with electronic speed controller</li>
+          <li>Servo-based steering</li>
+          <li>PWM-based speed control</li>
         </ul>
 
         <h3>Tools & Skills</h3>
         <ul>
           <li>SolidWorks CAD</li>
-          <li>3D printing</li>
+          <li>3D Printing</li>
           <li>Electronics integration</li>
           <li>Testing and iteration</li>
         </ul>
