--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <p class="lead">Click a card to view details.</p>
 
       <div class="grid">
-        <a class="card" href="projects/project-1.html">
+        <a class="card" href="projects/rc-car.html">
           <div class="thumb"></div>
           <div class="cardBody">
             <span class="badge blue">Personal Project</span>
